<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/music"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bgmusic"
        android:textSize="8pt"
        android:layout_marginTop="6dp"

    />
        <RadioGroup android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right">
        <RadioButton
            android:id="@+id/bgopen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            >
        </RadioButton>
        <RadioButton
            android:id="@+id/bgclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginRight="35dp">
        </RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/audio"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/audio"
        android:textSize="8pt"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@id/music"
        />
    <RadioGroup android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_gravity="right">

        <RadioButton
            android:id="@+id/audioopen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            >
        </RadioButton>
        <RadioButton
            android:id="@+id/audioclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginRight="35dp">
        </RadioButton>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="返回"
        android:id="@+id/back"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>