<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">

    <ImageView android:id="@+id/title_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/title"
        android:paddingTop="30dip"/>
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:textColor="#8a2be2"
        android:textSize="35dp"
        />
    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:textSize="28dp"
        android:text="@string/account"/>
    <EditText
        android:id="@+id/edname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/login"
        android:layout_toRightOf="@id/txtname"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtname"
        android:layout_marginRight="5dp"
        android:textSize="28dp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/edpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edname"
        android:layout_toRightOf="@id/txtpassword"
        android:layout_alignParentRight="true"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_below="@id/edpassword"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" >
        <Button
            android:id="@+id/btregister"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/regist"/>
        <Button
            android:id="@+id/btlogin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/log"/>
    </LinearLayout>

</RelativeLayout>
